recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
    left()
    ^FourSquare:12: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
    right()
    ^